--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next-tinacms-github": "^0.41.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
     "react-tinacms-github": "^0.41.0",
     "react-tinacms-inline": "^0.41.0",
     "styled-components": "^5.3.0",
