Update GE Unified Theme files

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.2.0",
     "react-tinacms-github": "^0.41.0",
     "react-tinacms-inline": "^0.41.0",
+    "sass": "^1.39.0",
     "styled-components": "^5.3.0",
     "tinacms": "^0.41.0"
   },
