--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "next": "10.2.0",
+    "next-fonts": "^1.5.1",
     "next-tinacms-github": "^0.41.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
