--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
+    "react-tinacms-editor": "^0.51.8",
     "react-tinacms-github": "^0.41.0",
     "react-tinacms-inline": "^0.41.0",
     "sass": "^1.39.0",
