--- a/ckeditor5/package.json
+++ b/ckeditor5/package.json
@@ -16,6 +16,7 @@
     "@ckeditor/ckeditor5-dev-webpack-plugin": "^25.4.4",
     "@ckeditor/ckeditor5-editor-inline": "^30.0.0",
     "@ckeditor/ckeditor5-essentials": "^30.0.0",
+    "@ckeditor/ckeditor5-font": "^30.0.0",
     "@ckeditor/ckeditor5-heading": "^30.0.0",
     "@ckeditor/ckeditor5-horizontal-line": "^30.0.0",
     "@ckeditor/ckeditor5-html-embed": "^30.0.0",
